[gd_scene load_steps=3 format=3 uid="uid://bjumi28w7ej7l"]

[ext_resource type="Script" path="res://src/Menus/menu.gd" id="1_3cudc"]
[ext_resource type="Texture2D" uid="uid://hcgs63l5ha7i" path="res://assets/ui/obsidian_title.png" id="2_isdqs"]

[node name="Menu" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3cudc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_isdqs")
stretch_mode = 3

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../ExitButton")
text = "Play"

[node name="HiScoresButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Hi-Scores"

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Settings"

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Credits"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_bottom = NodePath("../PlayButton")
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HiScoresButton" to="." method="_on_hi_scores_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
